buildscript {
    repositories {
        mavenCentral()
        jcenter()
        maven { url 'https://maven.google.com' }
    }
}

apply plugin: 'com.android.application'

android {
    compileSdkVersion 26

    defaultConfig {
        applicationId "com.ezr.et3844736"
        minSdkVersion 16
        targetSdkVersion 26
        versionCode 2
        versionName "2.1.8"
    }
    buildTypes {
        release {
//            minifyEnabled true
//            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
        compileOptions {
            sourceCompatibility JavaVersion.VERSION_1_8
            targetCompatibility JavaVersion.VERSION_1_8
        }
    }

    packagingOptions {
        exclude 'META-INF/DEPENDENCIES.txt'
        exclude 'META-INF/LICENSE.txt'
        exclude 'META-INF/NOTICE.txt'
        exclude 'META-INF/NOTICE'
        exclude 'META-INF/LICENSE'
        exclude 'META-INF/DEPENDENCIES'
        exclude 'META-INF/notice.txt'
        exclude 'META-INF/license.txt'
        exclude 'META-INF/dependencies.txt'
        exclude 'META-INF/LGPL2.1'
    }
}

dependencies {
    compile fileTree(dir: 'libs', include: ['*.jar'])

    testCompile 'junit:junit:4.12'
    compile 'com.android.support:appcompat-v7:26.1.0'
    compile 'com.android.support:support-v4:26.1.0'
    compile 'com.android.support:recyclerview-v7:26.1.0'
    compile 'com.android.support:percent:26.1.0'
    compile 'com.android.support:transition:26.1.0'
    compile 'com.android.support:design:26.1.0'
    compile "com.android.support:support-fragment:26.1.0"
    compile 'com.android.support:cardview-v7:26.1.0'
    compile 'com.google.code.gson:gson:2.8.0'
    compile 'com.squareup.okhttp3:okhttp:3.8.1'
    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
    compile 'io.reactivex.rxjava2:rxjava:2.1.0'
    compile 'com.fasterxml.jackson.core:jackson-core:2.8.9'
    compile 'com.fasterxml.jackson.core:jackson-databind:2.8.9'
    compile 'com.fasterxml.jackson.core:jackson-annotations:2.8.9'
    compile 'com.roughike:bottom-bar:2.3.1'

    compile "android.arch.lifecycle:runtime:1.0.0-alpha7"
    compile "android.arch.lifecycle:extensions:1.0.0-alpha7"
    compile "android.arch.persistence.room:runtime:1.0.0-alpha7"
    annotationProcessor "android.arch.lifecycle:compiler:1.0.0-alpha7"
    annotationProcessor "android.arch.persistence.room:compiler:1.0.0-alpha7"
    compile "android.arch.persistence.room:rxjava2:1.0.0-alpha7"

    compile "com.google.dagger:dagger:2.11"
    annotationProcessor "com.google.dagger:dagger-compiler:2.11"
    provided 'javax.annotation:jsr250-api:1.0'
}